--- a/team.qmd
+++ b/team.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Who We Are"
 title-block-banner: "#6ab04c"
+title-block-banner-color: "#ffffff"
 
 ---
 #### We are a team of researchers across institutions who have been volunteering our time. Write to us if you are interesting in joining.
