some text on get involved

--- a/join.qmd
+++ b/join.qmd
@@ -3,3 +3,6 @@ title: "Get Involved"
 title-block-banner-color: "#ffffff"
 title-block-banner: "#6ab04c"
 ---
+
+If you would like to Get Involved in working with INvenTree data, get in touch with us at [
+{{< iconify bi mdi:email size=1.1em title='Email' >}}](mailto:indiainventree@gmail.com)
