--- a/team.qmd
+++ b/team.qmd
@@ -4,22 +4,18 @@ title-block-banner: "#6ab04c"
 title-block-banner-color: "#ffffff"
 
 ---
-#### We are a team of researchers across institutions who have been volunteering our time. Write to us if you are interesting in joining.
+#### We are a team of researchers across institutions who have been volunteering our time. 
 
 ### Our Values
 
-#### - FAIR data
-Making forest data from India Findable, Accessible, Interoperable and Reusable. 
-[Read more](https://www.go-fair.org/fair-principles/) about the FAIR guidelines.
+{{< dtext "Making forest data from India Findable, Accessible, Interoperable and Reusable. 
+[Read more](https://www.go-fair.org/fair-principles/) about the FAIR guidelines." summary="FAIR data" >}}  
 
-#### - Fair sharing
-Committing to data sharing practices that center data owners, especially in India.
+{{< dtext "Committing to data sharing practices that center data owners, especially in India." summary="Fair sharing" >}}
 
-#### - Reproducible methods
-We aim to make all our processes transparent and reproducible through GitHub.
+{{< dtext "We aim to make all our processes transparent and reproducible through GitHub." summary="Reproducible methods" >}}
 
-#### - Collaborative learning
-Sharing tools and techniques among forest researchers in India.
+{{< dtext "Sharing tools and techniques among forest researchers in India." summary="Collaborative learning" >}}
 
 
 ### Working group
