--- a/team.qmd
+++ b/team.qmd
@@ -2,14 +2,24 @@
 title: "Who We Are"
 title-block-banner: "#6ab04c"
 title-block-banner-color: "#ffffff"
+filters:
+  - nutshell
 
 ---
 #### We are a team of researchers across institutions who have been volunteering our time. 
 
 ### Our Values
 
-{{< dtext "Making forest data from India Findable, Accessible, Interoperable and Reusable. 
-[Read more](https://www.go-fair.org/fair-principles/) about the FAIR guidelines." summary="FAIR data" >}}  
+### [:FAIR data](#FAIR-data)
+
+Making forest data from India Findable, Accessible, Interoperable and Reusable. 
+[Read more](https://www.go-fair.org/fair-principles/) about the FAIR guidelines.
+
+### [:Fair sharing](#Fair-sharing)
+Committing to data sharing practices that center data owners, especially in India.
+
+<!-- {{< dtext "Making forest data from India Findable, Accessible, Interoperable and Reusable. 
+[Read more](https://www.go-fair.org/fair-principles/) about the FAIR guidelines." summary="FAIR data" >}}   -->
 
 {{< dtext "Committing to data sharing practices that center data owners, especially in India." summary="Fair sharing" >}}
 
