--- a/coc.qmd
+++ b/coc.qmd
@@ -37,7 +37,7 @@ Non-verbal harassment includes actions or distribution, display, or discussion o
 The organising committee of the INvenTree reserves the right to enforce this Code of Conduct in any manner deemed appropriate. Anyone violating this Code of Conduct will first be asked to cease these behaviours. Failure to comply with requests can result in more severe consequences including, but not limited to, expulsion from current meeting and prohibition from future meetings.  
 
 ## Reporting
-You can report any violations to this code by writing to INvenTree email(inventree@gmail.com), Krishna Anujan(krishna.anujan@gmail.com), Neha Mohanbabu (nehamohanbabu@gmail.com). You can also report to the organisers of the particular meeting.  
+You can report any violations to this code by writing to INvenTree email ([inventree@gmail.com](mailto:inventree@gmail.com)), Krishna Anujan ([krishna.anujan@gmail.com](mailto:krishna.anujan@gmail.com)), Neha Mohanbabu ([nehamohanbabu@gmail.com](mailto:nehamohanbabu@gmail.com)). You can also report to the organisers of the particular meeting.  
 
 ## Disclaimers
 
