--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
-title: "The INdia Tree Inventory Network (INvenTree)"
+title: "The INdia Tree Inventory Network: INvenTree"
 title-block-banner: "#6ab04c"
 title-block-banner-color: "#ffffff"
 toc: false
 ---
 
 
-INvenTree is collating tree inventory datasets from disparate datasets across the country towards syntheses that will benefit ecological research and researchers.
+#### INvenTree is collating tree inventory datasets from disparate datasets across the country towards syntheses that will benefit ecological research and researchers.
 
 
 ## How?
