trying a different link colour and banner colour

--- a/team.qmd
+++ b/team.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Who We Are"
 title-block-banner: "#6ab04c"
+# title-block-banner: "#b0ad4c"
 title-block-banner-color: "#ffffff"
 filters:
   - nutshell
