--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "The INdia Tree Inventory Network: INvenTree"
-title-block-banner: "#6ab04c"
+title-block-banner: "#7d6a2a"
 title-block-banner-color: "#ffffff"
 toc: false
 ---
