--- a/join.qmd
+++ b/join.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Get Involved"
 title-block-banner-color: "#ffffff"
-title-block-banner: "#6ab04c"
+title-block-banner: "#7d6a2a"
 ---
 
 If you would like to Get Involved in working with INvenTree data, get in touch with us at [
