--- a/posts/newsletter1.qmd
+++ b/posts/newsletter1.qmd
@@ -1,15 +1,15 @@
 ---
-title: "India Tree Inventory Network (INvenTree)"
-subtitle: "Newsletter Issue 1 - August 2025"
-format: 
+# title: "India Tree Inventory Network (INvenTree)"
+title: "Newsletter Issue 1 - August 2025"
+# format: html
     # pdf:
     #     mainfont: "Helvetica"
-    html:
-        mainfont: "Agalumbo"
-        include-in-header:
-        - text: |
-            /* Color links */
-            #show link: set text(fill: rgb(100, 150, 100))
+    # html:
+    #     # mainfont: "Agalumbo"
+    #     include-in-header:
+    #     - text: |
+    #         /* Color links */
+    #         #show link: set text(fill: rgb(100, 150, 100))
 citeproc: true
 bibliography: member-pubs.bib
 csl: apa-cv.csl
